RxJava => Java 8 Stream API (resolution)