@@ -1,58 +1,44 @@
 package jp.water_cell.java.rxsample.collections;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-
 import jp.water_cell.java.rxsample.collections.models.Customer;
 import jp.water_cell.java.rxsample.collections.models.Product;
 import jp.water_cell.java.rxsample.collections.models.Shop;
-import rx.Observable;
 
-import static rx.math.operators.OperatorMinMax.maxBy;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public class I_CompoundTasks implements ICollectionUtils {
 
     public Set<Customer> getCustomersWhoOrderedProduct(Shop shop, Product product) {
         // Return the set of customers who ordered the specified product
-        List<Customer> list = Observable.from(shop.getCustomers())
+        return shop.getCustomers().stream()
                 .filter(customer -> new C_FlatMap().getOrderedProducts(customer).contains(product))
-                .toList()
-                .toBlocking()
-                .single();
-
-        return new HashSet<>(list);
+                .collect(Collectors.toSet());
     }
 
     public Product getMostExpensiveDeliveredProduct(Customer customer) {
         // Return the most expensive among delivered products
         // (use Order.isDelivered flag)
-        Observable<Product> productObservable = Observable.from(customer.getOrders())
+        return customer.getOrders().stream()
                 .filter(order -> order.isDelivered())
-                .flatMap(order1 -> Observable.from(order1.getProducts()));
-
-        return maxBy(productObservable, product -> product.getPrice())
-                .toBlocking()
-                .single()
-                .get(0);
+                .flatMap(order1 -> order1.getProducts().stream())
+                .max((p1, p2) -> Double.compare(p1.getPrice(), p2.getPrice()))
+                .get();
     }
 
-    public Integer getNumberOfTimesProductWasOrdered(Shop shop, Product product) {
+    public Long getNumberOfTimesProductWasOrdered(Shop shop, Product product) {
         // Returns number of times the given product was ordered.
         // Note: a customer may order the same product for several times.
-        return Observable.from(shop.getCustomers())
-                .flatMap(customer -> Observable.from(getOrderedProductsList(customer)))
+        return shop.getCustomers().stream()
+                .flatMap(customer -> getOrderedProductsList(customer).stream())
                 .filter(product1 -> product.equals(product1))
-                .count()
-                .toBlocking()
-                .single();
+                .count();
     }
 
     private List<Product> getOrderedProductsList(Customer customer) {
-        return Observable.from(customer.getOrders())
-                .flatMap(order -> Observable.from(order.getProducts()))
-                .toList()
-                .toBlocking()
-                .single();
+        return customer.getOrders().stream()
+                .flatMap(order -> order.getProducts().stream())
+                .collect(Collectors.toList());
     }
 }
